--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,9 @@
     <head>
         <meta charset="UTF-8">
         <title>Speech Recognition with Python</title>
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;700&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="{{url_for('static', filename='styles/index.css')}}" />
     </head>
 
     <body>
@@ -12,8 +15,14 @@
             <form method="POST" enctype="multipart/form-data">
                 <input type="file" name="file">
                 <br />
-                <input type="submit" value="Transcribe" />
+                <input id="submitButton" type="submit" value="Transcribe" />
             </form>
+            {% if transcript != "" %}
+            <div id="speechTranscriptContainer">
+                <h1>Transcript</h1>
+                <p id='speechText'>{{transcript}}</p>
+            </div>
+            {% endif %}
         </div>
     </body>
 
